--- a/18-25/productapp/package.json
+++ b/18-25/productapp/package.json
@@ -6,19 +6,23 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel reactstart json",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "reactstart": "react-scripts start",
+    "json": "json-server --p 3500 -r api.routes.json restData.js"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.14.0",
+    "npm-run-all": "^4.1.3"
   }
 }
