--- a/18-25/productapp/package.json
+++ b/18-25/productapp/package.json
@@ -43,6 +43,11 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
+    "graphql-import": "^0.7.1",
     "json-server": "^0.14.0",
     "npm-run-all": "^4.1.3"
   }
