--- a/18-25/productapp/package.json
+++ b/18-25/productapp/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-boost": "^0.1.22",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -17,12 +19,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "npm-run-all --parallel reactstart json",
+    "start": "npm-run-all --parallel reactstart json graphql",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "reactstart": "react-scripts start",
-    "json": "json-server --p 3500 -r api.routes.json restData.js"
+    "json": "json-server --p 3500 -r api.routes.json restData.js",
+    "graphql": "node graphqlServer.js"
   },
   "eslintConfig": {
     "extends": [
